--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "mongoose-findorcreate": "^4.0.0",
     "passport": "^0.6.0",
