--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,11 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "sfcookies": "^1.0.2",
+    "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
