--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,12 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsdom": "^24.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "mongoose-findorcreate": "^4.0.0",
     "passport": "^0.6.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "yahoo-stock-prices": "^1.1.0"
   }
 }
