--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "npm ci && npm audit fix",
     "start": "node index.js",
     "startDev": "nodemon index.js"
   },
