--- a/client-angular/package.json
+++ b/client-angular/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "primeicons": "^7.0.0",
     "primeng": "^17.16.0",
