--- a/client-angular/package.json
+++ b/client-angular/package.json
@@ -21,9 +21,11 @@
     "@popperjs/core": "^2.11.6",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "js-sha256": "^0.11.0",
     "primeicons": "^7.0.0",
     "primeng": "^16.1.0",
     "rxjs": "~7.8.0",
+    "sha.js": "^2.4.11",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
