--- a/client-angular/tsconfig.json
+++ b/client-angular/tsconfig.json
@@ -4,8 +4,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@app/*": ["src/app/*"],
-      "@routeGuards/*": ["src/routeGuards/*"]
+      "*": ["src/*"]
     },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
