updating interceptor message

--- a/client-angular/angular.json
+++ b/client-angular/angular.json
@@ -96,7 +96,7 @@
               "browserTarget": "client-angular:build:local"
             }
           },
-          "defaultConfiguration": "production"
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
